Suggested Fixes: Cleanup + Tidy