@@ -9,30 +9,36 @@ import java.util.Set;
 
 public class SpendThresholdRuntime {
 
-    private final Map<String, Long> cooldownUntil = new HashMap<>();
+    private static final class KeyState {
+        long cooldownUntil;
+        long lastActivityTick;
+        long lastDecayTick;
+        int lastProgressIntSent = Integer.MIN_VALUE;
+        SpendThresholdSpec spec;
+    }
 
-    private final Map<String, Long> lastActivityTick = new HashMap<>();
-
-    private final Map<String, Long> lastDecayTick = new HashMap<>();
-
-    private final Map<String, Integer> lastProgressIntSent = new HashMap<>();
+    private final Map<String, KeyState> states = new HashMap<>();
 
     private final java.util.EnumMap<ResourceType, Set<String>> activeByResource = new java.util.EnumMap<>(ResourceType.class);
-    private final Map<String, SpendThresholdSpec> specByKey = new HashMap<>();
+    private final java.util.EnumMap<ResourceType, Set<String>> activeByResourceReadOnly = new java.util.EnumMap<>(ResourceType.class);
 
     public void startCooldown(String key, long now, int cooldownTicks) {
         if (cooldownTicks <= 0) return;
-        cooldownUntil.put(key, now + cooldownTicks);
+        if (key == null || key.isEmpty()) return;
+        KeyState ks = states.computeIfAbsent(key, __ -> new KeyState());
+        ks.cooldownUntil = now + cooldownTicks;
     }
 
     public boolean isCoolingDown(String key, long now) {
-        Long until = cooldownUntil.get(key);
-        return until != null && now < until;
+        if (key == null || key.isEmpty()) return false;
+        KeyState ks = states.get(key);
+        return ks != null && now < ks.cooldownUntil;
     }
 
     public int cooldownRemainingTicks(String key, long now) {
-        Long until = cooldownUntil.get(key);
-        if (until == null) return 0;
+        if (key == null || key.isEmpty()) return 0;
+        KeyState ks = states.get(key);
+        long until = (ks == null) ? 0L : ks.cooldownUntil;
         long rem = until - now;
         return (int) Math.max(0, rem);
     }
@@ -40,27 +46,36 @@ public class SpendThresholdRuntime {
     // === Activity/Decay tracking ===
     public void markActivity(String key, long now) {
         if (key == null || key.isEmpty()) return;
-        lastActivityTick.put(key, now);
-        lastDecayTick.remove(key);
+        KeyState ks = states.computeIfAbsent(key, __ -> new KeyState());
+        ks.lastActivityTick = now;
+        ks.lastDecayTick = 0L;
     }
 
     public long getLastActivity(String key) {
-        return lastActivityTick.getOrDefault(key, 0L);
+        if (key == null || key.isEmpty()) return 0L;
+        KeyState ks = states.get(key);
+        return ks == null ? 0L : ks.lastActivityTick;
     }
 
     public long getLastDecay(String key) {
-        return lastDecayTick.getOrDefault(key, 0L);
+        if (key == null || key.isEmpty()) return 0L;
+        KeyState ks = states.get(key);
+        return ks == null ? 0L : ks.lastDecayTick;
     }
 
     public void markDecay(String key, long now) {
         if (key == null || key.isEmpty()) return;
-        lastDecayTick.put(key, now);
+        KeyState ks = states.computeIfAbsent(key, __ -> new KeyState());
+        ks.lastDecayTick = now;
     }
 
     public boolean progressIntChanged(String key, int intProgress) {
-        Integer prev = lastProgressIntSent.get(key);
-        if (prev == null || prev.intValue() != intProgress) {
-            lastProgressIntSent.put(key, intProgress);
+        if (key == null || key.isEmpty()) return false;
+        KeyState ks = states.get(key);
+        int prev = (ks == null) ? Integer.MIN_VALUE : ks.lastProgressIntSent;
+        if (prev != intProgress) {
+            if (ks == null) ks = states.computeIfAbsent(key, __ -> new KeyState());
+            ks.lastProgressIntSent = intProgress;
             return true;
         }
         return false;
@@ -69,8 +84,15 @@ public class SpendThresholdRuntime {
     // === Active key index ===
     public void markActive(ResourceType rt, String key, SpendThresholdSpec spec) {
         if (rt == null || key == null || key.isEmpty() || spec == null) return;
-        activeByResource.computeIfAbsent(rt, __ -> new HashSet<>()).add(key);
-        specByKey.put(key, spec);
+        Set<String> set = activeByResource.get(rt);
+        if (set == null) {
+            set = new HashSet<>();
+            activeByResource.put(rt, set);
+            activeByResourceReadOnly.put(rt, java.util.Collections.unmodifiableSet(set));
+        }
+        set.add(key);
+        KeyState ks = states.computeIfAbsent(key, __ -> new KeyState());
+        ks.spec = spec;
     }
 
     public void removeActive(ResourceType rt, String key) {
@@ -78,20 +100,34 @@ public class SpendThresholdRuntime {
         var set = activeByResource.get(rt);
         if (set != null) {
             set.remove(key);
-            if (set.isEmpty()) activeByResource.remove(rt);
+            if (set.isEmpty()) {
+                activeByResource.remove(rt);
+                activeByResourceReadOnly.remove(rt);
+            }
         }
-        specByKey.remove(key);
-        lastActivityTick.remove(key);
-        lastDecayTick.remove(key);
-        lastProgressIntSent.remove(key);
+        KeyState ks = states.get(key);
+        if (ks != null) {
+            ks.spec = null;
+            ks.lastActivityTick = 0L;
+            ks.lastDecayTick = 0L;
+            ks.lastProgressIntSent = Integer.MIN_VALUE;
+        }
     }
 
     public Set<String> getActiveKeys(ResourceType rt) {
         var s = activeByResource.get(rt);
-        return s == null ? java.util.Set.of() : java.util.Set.copyOf(s);
+        if (s == null || s.isEmpty()) return java.util.Set.of();
+        var view = activeByResourceReadOnly.get(rt);
+        if (view == null) {
+            view = java.util.Collections.unmodifiableSet(s);
+            activeByResourceReadOnly.put(rt, view);
+        }
+        return view;
     }
 
     public SpendThresholdSpec getSpec(String key) {
-        return specByKey.get(key);
+        if (key == null || key.isEmpty()) return null;
+        KeyState ks = states.get(key);
+        return ks == null ? null : ks.spec;
     }
 }
